CL-171: NVD3 Bullet Chart margin and height tweaks
• Allow support for setting `margin` and `height` in chart data properties
• Remove hardwired craziness

--- a/examples/bulletChartWithMeasureCustomization.html
+++ b/examples/bulletChartWithMeasureCustomization.html
@@ -100,8 +100,9 @@
         "markerLineLabels": ["30d Avg"],  
         "markers": [8032.66],       // current price
         "markerLabels": ["Current Price"],
-        "markerLines": [7710.91],    // previous price
-        "measureColor": "darkorange"
+        "markerLines": [7746.99],    // previous price
+        "measureColor": "darkorange",
+        "height": 30
     }
 
     nv.addGraph(function() {
