CL-171: Add syntax error in `data` definition

--- a/examples/bulletChartWithMeasureCustomization.html
+++ b/examples/bulletChartWithMeasureCustomization.html
@@ -114,13 +114,21 @@
             0.231503, // 12m High
             0.231503  // ATH
         ],
+        "rangeLabels": [
+            "",
+            "12m Low",
+            "12m Avg",
+            "",
+            "12m High",
+            "ATH"
+        ],
         "measures": [0.029833,0.1184],  // 30d Range
         "measureLabels": ["Past 30d"],
         "markerLineLabels": ["30d Avg"],  
         "markers": [0.07789],       // current price
         "markerLabels": ["Current Price"],
-        "height": 30
-        "markerLines": [0.06244435],    //  30d Avg
+        "height": 30,
+        "markerLines": [0.16244435],    //  30d Avg
         "measureColor": "darkorange"
     }
 
