--- a/examples/bulletChartWithMeasureCustomization.html
+++ b/examples/bulletChartWithMeasureCustomization.html
@@ -27,9 +27,9 @@
             border-right-width: 1px;
         }
 
-        .nv-range2 {
-            fill:blueviolet !important;
-            fill-opacity: 1.0 !important;
+        .nv-marker1 {
+            stroke:blueviolet !important;
+            stroke-width: 3px !important;
         }
 
         .nv-range3 {
@@ -51,6 +51,7 @@
 
         .nv-title {
             font-size: 14px !important;
+            margin-top: 15px;
         }
 
         .desc {
@@ -85,51 +86,31 @@
 </ul>
 <script>
 
-    // var data = {
-    //     "title": "BTC/USD",         
-    //     "ranges": [
-    //         0,       // Always 0
-    //         1173.51, // 12m Low
-    //         6581.47, // 12m Avg
-    //         6681.47, // +100 px ??
-    //         19000, // 12m High
-    //         19535.7  // ATH
-    //     ],
-    //     "measures": [6695.06,9107.93],  // 30d Range
-    //     "measureLabels": ["Past 30d"],
-    //     "markerLineLabels": ["30d Avg"],  
-    //     "markers": [8032.66],       // current price
-    //     "markerLabels": ["Current Price"],
-    //     "markerLines": [7710.91],    // previous price
-    //     "measureColor": "darkorange"
-    // }
-
     var data = {
         "title": "XVG/USD",         
         "ranges": [
-            0,       // Always 0
-            0.0000721565, // 12m Low
-            0.0318894, // 12m Avg
-            0.033, // +100 px ??
-            0.231503, // 12m High
-            0.231503  // ATH
+            0,       // Always 0 
+            0.0000721565, // 12m Low 
+            0.0318894, // 12m Avg 
+            0.0318894,  // placeholder (use 12m average, must be in positive direction)
+            0.231503, // 12m High 
+            0.231503  // ATH 
         ],
         "rangeLabels": [
-            "",
-            "12m Low",
-            "12m Avg",
-            "",
-            "12m High",
-            "ATH"
+            "", 
+            "12m Low", 
+            "12m Avg", 
+            "12m High", 
+            "ATH" 
         ],
         "measures": [0.029833,0.1184],  // 30d Range
         "measureLabels": ["Past 30d"],
-        "markerLineLabels": ["30d Avg"],  
         "markers": [0.07789],       // current price
         "markerLabels": ["Current Price"],
-        "height": 30,
-        "markerLines": [0.16244435],    //  30d Avg
-        "measureColor": "darkorange"
+        "markerLines": [0.16244435, 0.0318894],    //  30d Avg
+        "markerLineLabels": ["30d Avg", "12m Avg"],  
+        "measureColor": "darkorange",
+        "height": 30
     }
 
 
