CK-222: Add support for USD currency formatting
• Add `formatValues()` method to display mouseovers, for marker and range labels in USD

--- a/examples/bulletChartWithMeasureCustomization.html
+++ b/examples/bulletChartWithMeasureCustomization.html
@@ -107,7 +107,7 @@
         "measureLabels": ["Past 30d"],
         "markers": [0.07789],       // current price
         "markerLabels": ["Current Price"],
-        "markerLines": [0.16244435, 0.0318894],    //  30d Avg
+        "markerLines": [0.16244435, 0.0318894],    //  30d Avg, 12m Avg
         "markerLineLabels": ["30d Avg", "12m Avg"],  
         "measureColor": "darkorange",
         "height": 30
